--- a/client/src/Components/Card/card.module.css
+++ b/client/src/Components/Card/card.module.css
@@ -1,8 +1,28 @@
 .card {
-    background-color: dodgerblue;
-    color: white;
+    position: relative;
     padding: 1rem;
     height: 18rem;
     margin: 10px;
-
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    overflow: hidden;
 }
+.card::after {
+    position: absolute;
+    content: '';
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.3);
+   z-index: 1;
+}
+
+.text {
+    padding: 10px;
+    background-color: #ffffffbd;
+    width: fit-content;
+    z-index: 2;
+}
+
