--- a/client/src/Components/Card/card.module.css
+++ b/client/src/Components/Card/card.module.css
@@ -1,4 +1,5 @@
 .card {
+    color: black;
     position: relative;
     padding: 1rem;
     height: 18rem;
@@ -7,22 +8,24 @@
     background-repeat: no-repeat;
     background-size: cover;
     overflow: hidden;
-}
-.card::after {
-    position: absolute;
-    content: '';
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.3);
-   z-index: 1;
+    border-radius: 10%;
 }
 
-.text {
+
+.cardcontent {
+    position: relative;
+    
     padding: 10px;
+    font-size: 1.5rem;
+    min-width: 100%;
+    height: auto;
     background-color: #ffffffbd;
-    width: fit-content;
-    z-index: 2;
+    
+}
+.cardcontent .cardflex {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 5px;
+    
 }
 
