--- a/client/src/Components/Cards/cards.module.css
+++ b/client/src/Components/Cards/cards.module.css
@@ -5,6 +5,8 @@
     height: 100%;
     margin: 0 auto;
     display: grid;
+    padding: 0 20px;
+
 }
 @media (min-width: 600px) {
     .containerCards { grid-template-columns: repeat(2, 1fr); }
