--- a/client/src/Components/Filters/filters.module.css
+++ b/client/src/Components/Filters/filters.module.css
@@ -1,12 +1,13 @@
 .container {
+    background-color: rgb(25, 236, 208);
     width: 100%;
-    height: 40px;
-    display: flex;
-    gap: 5px;
-    justify-content: center;
+    height: auto;
+
 }
 
 .container select {
+    position: relative;
+    right: 0%;
     cursor: pointer;
 }
 
@@ -26,10 +27,12 @@
 .containerFilters .content {
     position: relative;
     display: flex;
-    flex-direction: column;
+    flex-wrap: wrap;
+    align-content: center;
+    gap: 5px;
     height: 0;
-    width: 110%;
-    background-color: rgb(104, 47, 47);
+    min-width: 100%;
+    background-color: #fff;
     overflow: hidden;
     transition: 0.5s;
     overflow-y: auto;
@@ -37,11 +40,15 @@
 
 .containerFilters .content input {
     width: 30px;
+    height: 15px;
     cursor: pointer;
 }
 
 .containerFilters.active .content{
     height: 100px;
+}
+.content label {
+    
 }
 
 
