--- a/client/src/Components/Home/home.module.css
+++ b/client/src/Components/Home/home.module.css
@@ -1,6 +1,5 @@
 .container {
     width: 100%;
-    height: 100%;
-    background: rgb(212,108,199);
-    background: linear-gradient(242deg, rgba(212,108,199,0.9475140397956058) 44%, rgba(213,202,168,1) 63%);
+    min-height: 100vh;
+    background-color: #1f1f1f;
 }
